fix(a11y): Use darker text accent to provide good contrast

--- a/public/theme.css
+++ b/public/theme.css
@@ -57,7 +57,8 @@
 :root {
 	color-scheme: light;
 	--theme-accent: hsla(var(--color-orange), 1);
-	--theme-text-accent: hsla(var(--color-orange), 1);
+	/* This is a darker, redder orange than the main accent for sufficient contrast. */
+	--theme-text-accent: hsla(12, 100%, 41%, 1);
 	--theme-accent-opacity: 0.1;
 	--theme-divider: hsla(var(--color-gray-90), 1);
 	--theme-text: hsla(var(--color-gray-10), 1);
